--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,4 +1,7 @@
-spring.datasource.url=jdbc:mysql://139.159.200.1:9009/imdb
-spring.datasource.data-username=root
+spring.datasource.url=jdbc:mysql://139.159.200.1:9009/imdb?useUnicode=true&useSSL=false&characterEncoding=UTF-8&autoReconnect=true&rewriteBatchedStatements=true
+spring.datasource.username=root
 spring.datasource.password=952700Jack1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+logging.file=mylogs.log
+logging.path=D:/mylogs
